kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_static_env/test_3.stderr
error: Expected at most 5 arguments, got 6.
 --> $DIR/test_3.rs:5:29
  |
5 | #[require_binary_static_env(E, EC, DC, SC, self, X)]
  |                             ^^^^^^^^^^^^^^^^^^^^^^
